test/ill-formed/unsupported/for_loop.py
total = 0
for x in [1, 2, 3]:
    total = total + x
print(total)
